--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lyngso Garden Materials</title>
+    <link rel='stylesheet' id='fonts-css'  href='//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i' type='text/css' media='all' />
+    <!-- <link rel="stylesheet" href="styles.css" class="css"> -->
+    <script src="https://kit.fontawesome.com/b029a65cc7.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
